force-app/main/default/objects/TransportationExpenseDetail__c/TransportationExpenseDetail__c.object-meta.xml
<CustomObject>
    <label>運送経費明細</label>
    <nameField>
        <displayFormat>TED-{00000000}</displayFormat>
        <label>運送経費明細#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>