force-app/main/default/objects/TransportationExpenseDetail__c/fields/AdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentAmount__c</fullName>
    <label>調整分</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>