force-app/main/default/objects/TransportationExpenseDetail__c/fields/BaseFare__c.field-meta.xml
<CustomField>
    <fullName>BaseFare__c</fullName>
    <label>基本運賃</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>