force-app/main/default/objects/TransportationExpenseDetail__c/fields/CourseName__c.field-meta.xml
<CustomField>
    <fullName>CourseName__c</fullName>
    <label>コース-便</label>
    <length>255</length>
    <type>Text</type>
</CustomField>