force-app/main/default/objects/TransportationExpenseDetail__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <label>配送日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>