force-app/main/default/objects/TransportationExpenseDetail__c/fields/DrivingDistance__c.field-meta.xml
<CustomField>
    <fullName>DrivingDistance__c</fullName>
    <label>走行距離</label>
    <precision>9</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>