force-app/main/default/objects/TransportationExpenseDetail__c/fields/ExtraDistanceCharge__c.field-meta.xml
<CustomField>
    <fullName>ExtraDistanceCharge__c</fullName>
    <label>距離増し</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>