force-app/main/default/objects/TransportationExpenseDetail__c/fields/PartnerAccountCode__c.field-meta.xml
<CustomField>
    <fullName>PartnerAccountCode__c</fullName>
    <label>協力会社CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>