force-app/main/default/objects/TransportationExpenseDetail__c/fields/PartnerAccountName__c.field-meta.xml
<CustomField>
    <fullName>PartnerAccountName__c</fullName>
    <label>協力会社名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>