force-app/main/default/objects/TransportationExpenseDetail__c/fields/VehicleType__c.field-meta.xml
<CustomField>
    <fullName>VehicleType__c</fullName>
    <label>車種</label>
    <length>255</length>
    <type>Text</type>
</CustomField>